# malloc-tag

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml  pypi-release.yml
examples/malloctag_and_tcmalloc/: malloctag_and_tcmalloc  malloctag_and_tcmalloc.cpp  malloctag_and_tcmalloc_stats.dot  malloctag_and_tcmalloc_stats.json
examples/minimal/: minimal.cpp  minimal_stats.dot  minimal_stats.json
examples/minimal_tcmalloc/: minimal_tcmalloc  minimal_tcmalloc.cpp
examples/multithread/: multithread  multithread.cpp  multithread_stats.aggregated.json  multithread_stats.dot  multithread_stats.json  multithread_stats2.json  postprocess_agg_rules.json
include/: malloc_tag.h
include/private/: malloc_tree.h  malloc_tree_node.h  malloc_tree_registry.h  output_utils.h
src/: fmpool.h  malloc_tag.cpp  malloc_tree.cpp  malloc_tree_node.cpp  malloc_tree_registry.cpp
tests/: main.cpp  snapshots.cpp  toomanylevels.cpp  toomanynodes.cpp  toomanysiblings.cpp
tools/: Makefile  README.md  example_agg_rules.json  json2dot.py  mtag_graphviz_utils.py  mtag_node.py  mtag_snapshot.py  mtag_tree.py  postprocess.py  pyproject.toml  testoutput.dot
tools/malloc_tag/: Makefile
tools/malloc_tag/libs/: mtag_graphviz_utils.py  mtag_node.py  mtag_snapshot.py  mtag_tree.py
tools/malloc_tag/mtag_json2dot/: json2dot.py
tools/malloc_tag/mtag_postprocess/: example_agg_rules.json  postprocess.py
